fix for rounded login/signup buttons on iOS devices

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -37,3 +37,7 @@ body, html {
     float: none;
   }
 }
+
+.login-signup-button {
+  border-radius: 0px !important;
+}
